--- a/HsvColorPickers/HsvColorPickers.csproj
+++ b/HsvColorPickers/HsvColorPickers.csproj
@@ -35,6 +35,7 @@
     <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\HSVColorPickers.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <PlatformTarget>x86</PlatformTarget>
@@ -106,9 +107,11 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Handlers\AlphaChangeHandler.cs" />
     <Compile Include="AlphaPicker.xaml.cs">
       <DependentUpon>AlphaPicker.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Handlers\ColorChangeHandler.cs" />
     <Compile Include="ColorPicker.xaml.cs">
       <DependentUpon>ColorPicker.xaml</DependentUpon>
     </Compile>
@@ -116,6 +119,7 @@
       <DependentUpon>HexPicker.xaml</DependentUpon>
     </Compile>
     <Compile Include="HSV.cs" />
+    <Compile Include="Handlers\HSVChangeHandler.cs" />
     <Compile Include="HSVPicker.xaml.cs">
       <DependentUpon>HSVPicker.xaml</DependentUpon>
     </Compile>
@@ -123,9 +127,13 @@
       <DependentUpon>NumberPicker.xaml</DependentUpon>
     </Compile>
     <Compile Include="Palette.cs" />
+    <Compile Include="PalettePickers\PaletteBase.cs" />
+    <Compile Include="PalettePickers\PaletteHue.cs" />
     <Compile Include="PalettePicker.xaml.cs">
       <DependentUpon>PalettePicker.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PalettePickers\PaletteSaturation.cs" />
+    <Compile Include="PalettePickers\PaletteValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RGBPicker.xaml.cs">
       <DependentUpon>RGBPicker.xaml</DependentUpon>
@@ -139,6 +147,8 @@
     <Compile Include="TouchSlider.xaml.cs">
       <DependentUpon>TouchSlider.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Handlers\TouchValueChangeHandler.cs" />
+    <Compile Include="Handlers\ValueChangeHandler.cs" />
     <Compile Include="WheelPicker.xaml.cs">
       <DependentUpon>WheelPicker.xaml</DependentUpon>
     </Compile>
