--- a/HSVColorPickers/HSVColorPickers.csproj
+++ b/HSVColorPickers/HSVColorPickers.csproj
@@ -132,6 +132,7 @@
       <DependentUpon>NumberPicker.xaml</DependentUpon>
     </Compile>
     <Compile Include="Palette.cs" />
+    <Compile Include="PaletteHuePicker.cs" />
     <Compile Include="PalettePickers\PaletteBase.cs" />
     <Compile Include="PalettePickers\PaletteHue.cs" />
     <Compile Include="PalettePicker.xaml.cs">
@@ -139,6 +140,8 @@
     </Compile>
     <Compile Include="PalettePickers\PaletteSaturation.cs" />
     <Compile Include="PalettePickers\PaletteValue.cs" />
+    <Compile Include="PaletteSaturationPicker.cs" />
+    <Compile Include="PaletteValuePicker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RGBPicker.xaml.cs">
       <DependentUpon>RGBPicker.xaml</DependentUpon>
